# SafeSym

./: README.md  pyproject.toml
configs/: constraint_rules.json  models.example.json  paths.example.yaml  safety_rules.json
safeww/: __init__.py
safeww/agents/: __init__.py  actions.py  episode.py  llm.py  model_config.py  policy.py  prompts.py
safeww/cli/: __init__.py  annotate_risks.py  generate_canonical_domain.py  generate_world_model.py  generate_world_models.py  inject_safety.py  inspect_task.py  refine_risks.py  refine_safety.py  run_eval.py  run_task.py  solve.py  verify_canonical_domain.py
safeww/config/: __init__.py  loader.py  paths.py
safeww/data/: __init__.py  artifacts.py
safeww/envs/: __init__.py  server.py  webarena_adapter.py
safeww/eval/: __init__.py  metrics.py  runner.py
safeww/fsm/: __init__.py  loader.py
safeww/pddl/: __init__.py  ast.py  parser.py  serializer.py
safeww/planning/: __init__.py  fast_downward.py  plan.py
safeww/safety/: __init__.py  dynamic.py  injector.py  obligations.py  risk_categories.py  risk_dynamic.py  risk_profile.py  rules.py
safeww/world_model/: __init__.py  agentic.py  autowebworld_batch.py  canonical.py  fsm_conformance.py  naming.py  pddl_io.py  prompts.py  verify.py
scripts/: inject_safety.sh  solve_safe.sh
